--- a/часы/css/style.css
+++ b/часы/css/style.css
@@ -28,15 +28,44 @@ body {
 	margin: 0;
 	color: white;
 	display: inline-block;
-	width: 20%;
+	width: 33.3%;
 	height: 100%;
 	text-decoration: none;
-	font-size: 24px;
+	font-size: 22px;
 	text-align: center;
 	vertical-align: middle;
 	padding-top: 10px;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
+}
+
+@media(min-width: 460px) {
+	.header__link {
+		font-size: 26px;
+	}
+	
+}
+
+@media(min-width: 720px) {
+	.header__link {
+		
+		font-size: 30px;
+	}
+	
+}
+
+@media(min-width: 1000px) {
+	.header__link {
+		width: 25%;
+	}
+	
+}
+
+@media(min-width: 1200px) {
+	.header__link {
+		width: 20%;
+	}
+	
 }
 
 .header__link:hover {
@@ -52,15 +81,15 @@ body {
 
 .main-title {
 	font-family: 'Times New Roman';
-	margin-top: 50px;
-	font-size: 40px;
+	margin: 20px 0;
+	font-size: 34px;
 	text-transform: uppercase;
 }
 
 .time {
 	font-family: lcdnova;
 	font-weight: 500;
-	font-size: 160px;
+	font-size: 54px;
 }
 
 .time__item {
@@ -69,27 +98,90 @@ body {
 }
 
 .noon {
+	margin-left: 5px;
 	font-family: sans-serif;
-	font-size: 48px;
+	font-size: 20px;
 	text-transform: uppercase;
 }
 
 .date__item {
 	margin-top: 25px;
 	display: inline-block;
-	font-size: 40px;
+	font-size: 26px;
 }
 
 .date__number {
-	margin-right: 20px;
+	margin-right: 6px;
 }
 
 .date__month {
-	margin-right: 20px;
+	margin-right: 6px;
 }
 
 .date__year {
-	margin-right: 70px;
+	margin-right: 20px;
+}
+
+@media(min-width: 460px) {
+	.time {
+		font-size: 80px;
+	}
+
+	.date__item {
+		font-size: 36px;
+	}
+
+	.noon {
+		margin-left: 10px;
+		font-size: 28px;
+	}
+}
+
+@media(min-width: 720px) {
+	.main-title {
+		margin: 50px 0;
+		font-size: 40px;
+	}
+
+	.time {
+		font-size: 124px;
+	}
+
+	.date__item {
+		font-size: 44px;
+	}
+
+	.date__number {
+		margin-right: 12px;
+	}
+
+	.date__month {
+		margin-right: 12px;
+	}
+
+	.date__year {
+		margin-right: 44px;
+	}
+
+	.noon {
+		margin-left: 16px;
+		font-size: 40px;
+	}
+}
+
+@media(min-width: 1000px) {
+	.time {
+		font-size: 160px;
+	}
+
+	.date__item {
+		font-size: 44px;
+	}
+
+	.noon {
+		margin-left: 22px;
+		font-size: 50px;
+	}
 }
 
 .time__wrapper {
