--- a/часы/css/style.css
+++ b/часы/css/style.css
@@ -81,7 +81,8 @@ body {
 
 .main-title {
 	font-family: 'Times New Roman';
-	margin: 20px 0;
+	margin-top: 20px;
+	margin-bottom: 50px;
 	font-size: 34px;
 	text-transform: uppercase;
 }
@@ -105,7 +106,8 @@ body {
 }
 
 .date__item {
-	margin-top: 25px;
+	margin-top: 50px;
+	margin-bottom: 0px;
 	display: inline-block;
 	font-size: 26px;
 }
@@ -118,8 +120,9 @@ body {
 	margin-right: 6px;
 }
 
-.date__year {
-	margin-right: 20px;
+.date__day {
+	margin-top: 10px;
+	display: block;
 }
 
 @media(min-width: 460px) {
