--- a/часы/css/style.css
+++ b/часы/css/style.css
@@ -718,12 +718,42 @@ body {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .city-buttons,
 .settings-control {
-	width: 50%;
+	width: 100%;
 	padding-top: 80px;
+}
+
+@media(min-width: 720px) {
+	.settings-block {
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: row;
+		        flex-direction: row;
+	    -webkit-box-pack: center;
+	        -ms-flex-pack: center;
+	            justify-content: center;
+	    -webkit-box-align: center;
+	        -ms-flex-align: center;
+	            align-items: center;
+	}
+
+	.city-buttons,
+	.settings-control {
+		width: 50%;
+	}
 }
 
 .settings-control {
